Fixed letter spacing

--- a/split.css
+++ b/split.css
@@ -167,8 +167,7 @@ body.page-template-page-fullsingle-split {
 .split-intro {
   font-weight: 600;
   font-size: 52px;
-  line-height: 60px;
-  letter-spacing: -2px; }
+  line-height: 60px; }
   .split-intro h1 {
     font-weight: 600;
     font-size: 32px;
